--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "src/server.js",
   "type": "module",
   "scripts": {
+    "build": "tsc",
+    "dev:tsc": "tsc --watch",
     "dev": "npx nodemon src/server.js  --ignore 'src/models/json/*.json'",
     "lint": "npx eslint . --ext .js",
     "test": "npx mocha --ui tdd test/**/*.js"
@@ -12,6 +14,12 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "ts-node": "^10.9.2",
+    "@types/hapi__cookie": "^12.0.5",
+    "@types/hapi__inert": "^5.2.10",
+    "@types/hapi__vision": "^5.5.8",
+    "@typescript-eslint/eslint-plugin": "^7.5.0",
+    "@typescript-eslint/parser": "^7.5.0",
     "eslint": "^8.57.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^9.1.0",
