--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/hapi__cookie": "^12.0.5",
     "@types/hapi__inert": "^5.2.10",
     "@types/hapi__vision": "^5.5.8",
@@ -35,6 +36,7 @@
     "@hapi/hapi": "^21.3.8",
     "@hapi/inert": "^7.1.0",
     "@hapi/vision": "^7.0.3",
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "handlebars": "^4.7.8",
     "hapi-auth-jwt2": "^10.5.1",
